# poo1_simPC1a_task4_v2021_template

./: CMakeLists.txt  README.md  cppcheck.cpp  generate_zip.sh  p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h  run.sh  test_1_1.in  test_2_1.in  test_3_1.cpp  test_3_1.in  test_3_2.in
